tidied up slightly, edited copyright text

--- a/templates/about.html
+++ b/templates/about.html
@@ -38,7 +38,11 @@
 
         </div>
 
-        <hr class="featurette-divider">
+        {% if loop.index != loop.length %}
+        
+            <hr class="featurette-divider">
+
+        {% endif %}
     
     {% endfor %}
 
