--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website <span id="copyright"></span></p>
+          <p class="copyright text-muted">Copyright &copy; Your Website 2024 - <span id="copyright"></span></p>
         </div>
       </div>
     </div>
